--- a/apps/login/templates/login/index.html
+++ b/apps/login/templates/login/index.html
@@ -40,11 +40,11 @@
             {% csrf_token %}
 
             <h3>Register</h3>
-            <p>Name:</p>
-            <input type="text" name="name" />
+            <p>First Name:</p>
+            <input type="text" name="first_name" />
 
-            <p>Alias:</p>
-            <input type="text" name="alias" />
+            <p>Last name:</p>
+            <input type="text" name="last_name" />
 
             <p>Email:</p>
             <input type="text" name="email" />
