--- a/apps/reservation/static/reservation/index.css
+++ b/apps/reservation/static/reservation/index.css
@@ -5,9 +5,13 @@ h1{
  padding: 10px;
  background-color: gray;
 }
+.create_res{
+	width: 100%;
+	height: auto;
+}
 .client{
 	background-color: green;
-	width: auto%;
+	width: auto;
 	display: inline-block;
 	padding: 24px;
 }
