--- a/apps/reservation/templates/reservation/index.html
+++ b/apps/reservation/templates/reservation/index.html
@@ -56,15 +56,15 @@
 
 	 			<div class="field-wrap">
 	 			<p>Date of Birth</p>
-	 			<input type="text" name="dob">
+	 			<input type="date" name="dob">
 	 			<p>Drivers License Number</p>
 	 			<input type="text" name="dl_number">
 	 			<p>Drivers License State</p>
 	 			<input type="text" name="dl_state">
 	 			<p>Drivers License Issue Date</p>
-	 			<input type="text" name="dl_issue">
+	 			<input type="date" name="dl_issue">
 	 			<p>Drivers License Exp Date</p>
-	 			<input type="text" name="dl_exp">
+	 			<input type="date" name="dl_exp">
 	 			</div>
 
 	 			<div class="field-wrap">
@@ -75,31 +75,48 @@
 		 			<p>Policy #</p>
 		 			<input type="text" name="policy_num">
 		 			<p>Exp. Date: </p>
-		 			<input type="text" name="ins_exp">
+		 			<input type="date" name="ins_exp">
 		 			<br>
 		 			<br>
-		 			<p>Would you like to add Protection?</p>
+		 			<p>Would you like to add Our Protection?</p>
 				</div>
 			</div>
  			<div class="vehicle">
 
 	 			<p>Vehicle needed</p>
-	 			<input type="text">
+	 			
+				<select name="vehicle" >
+					<option value="compact">Compact Sedan</option>
+					<option value="midsize">Midsize Sedan</option>
+					<option value="fullsize">Full-size Sedan</option>
+					<option value="suv">SUV</option>
+				</select> 
 
 	 			<p>Pickup Date/Time</p>
-	 			<input type="text">
+	 			<input type="date">
 
 	 			<p>Pickup Location</p>
-	 			<input type="text">
+	 			<select name="location" >
+					<option value="dallas">Dallas</option>
+					<option value="plano">Plano</option>
+					<option value="garland">Garland</option>
+					<option value="richardson">Richardson</option>
+				</select> 
 
 	 			<p>Dropoff Date/Time</p>
-	 			<input type="text">
+	 			<input type="date">
 
 	 			<p>Dropoff Location</p>
-	 			<input type="text">
+	 			<select name="location" >
+					<option value="dallas">Dallas</option>
+					<option value="plano">Plano</option>
+					<option value="garland">Garland</option>
+					<option value="richardson">Richardson</option>
+				</select> 
+
  			</div>
  			<br>
- 			<button>Submit</button>
+ 			<button>Get Quote</button>
  		</form>
 
 
