--- a/apps/reservation/templates/reservation/index.html
+++ b/apps/reservation/templates/reservation/index.html
@@ -28,7 +28,7 @@
 
 		<a href="{% url 'dashboard' %}"> Dashboard </a>
 		
-		<a href="{% url 'add' %}"> Add Reservation </a>
+		<a href="{% url 'add_res' %}"> Add Reservation </a>
 
 		<a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout </a>
 
