delete url and view created

--- a/apps/reservation/templates/reservation/add.html
+++ b/apps/reservation/templates/reservation/add.html
@@ -93,14 +93,14 @@
 
 					<p>Select Vehicle: </p>
 					<select name="vehicle">
-						<option value="volvo">Compact</option>
-						<option value="saab">Mid-size Sedan</option>
-						<option value="fiat" selected>Full-size Sedan</option>
-						<option value="volvo">Mid-size SUV</option>
-						<option value="saab">Full-size SUV</option>
-						<option value="fiat" selected>Van</option>
-						<option value="volvo">Passander Van</option>
-						<option value="saab">Pickup Truck</option>
+						<option value="Compact">Compact</option>
+						<option value="Mid-size Sedan">Mid-size Sedan</option>
+						<option value="Full-size Sedan" selected>Full-size Sedan</option>
+						<option value="Mid-size SUV">Mid-size SUV</option>
+						<option value="Large SUV">Large SUV</option>
+						<option value="Van" selected>Van</option>
+						<option value="Passanger Van">Passander Van</option>
+						<option value="Pickup Truck">Pickup Truck</option>
 					</select>
 
 					<p>Pickup Location: </p>
