--- a/apps/reservation/templates/reservation/index.html
+++ b/apps/reservation/templates/reservation/index.html
@@ -2,29 +2,26 @@
 <head>
 	<title>Reservations Page</title>
 
-	{% load static %}
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		{% load staticfiles %}
+		<!-- Bootstrap -->
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
-	<!-- CSS Link -->
-	<link rel="stylesheet" type="text/css" href="{% static 'reservation/css/index.css' %}">
-
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-	<!-- Popper JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-
-	<!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script> 
+		<!-- Icon library -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<!-- jQuery library -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<!-- CSS Link -->
+		<link rel="stylesheet" href="{% static 'reservation/css/index.css' %}" charset="utf-8"  />
+		<!-- jQuery Link -->
+		<script src="{% static "reservation/js/index.js" %}"></script>
 
 </head>
 <body>
 
 	<div class="topnav" id="myTopnav">
-
-		Welcome, {{ user.first_name }}!
+		 <a class="navbar-brand" class="active"><h3 class="navbar-brand" class="active">Welcome, {{ user.first_name }}!</h3></a>
 
 		<a href="{% url 'dashboard' %}"> Dashboard </a>
 		
@@ -36,41 +33,39 @@
 
 	</div>
 	<div class="wrapper">
-		<h1>Welome, {{user.first_name}} {{user.email}}</h1>
-		<p>Today's Reservations: </p>
-
-		{{ today }}
-
-
-		<p>These are your previous </p>
-
-		<table class="table">
-			<thead class="thead-dark">
-				<tr>
-				<th scope="col">Pickup Location</th>
-				<th scope="col">Vehicle Class</th>
-				<th scope="col">Pickup Time</th>
-				<th scope="col">Dropoff Location</th>
-				<th scope="col">Dropoff Time</th>
-				<th scope="col"> Action </th>
-				</tr>
-			</thead>
-			<tbody>
-				{% for res in future_res %}
+		<h1>Welome, {{user.first_name}}</h1>
+		<p>Today is {{ today }}, your Reservations are: </p>
+		<div class="reslist">
+			<table class="table">
+				<thead class="thead-dark">
 					<tr>
-					<td>{{ res.pu_location }}</td>
-					<td>{{ res.vehicle }}</td>
-					<td>{{ res.pu_time }}</td>
-					<td>{{ res.do_location }}</td>
-					<td>{{ res.do_time }}</td>
-					<td> <a href="{{res.id}}">Edit</a> / <a href="delete/{{res.id}}">Delete</a> </td>
+					<th scope="col">Pickup Location</th>
+					<th scope="col">Vehicle Class</th>
+					<th scope="col">Pickup Time</th>
+					<th scope="col">Dropoff Location</th>
+					<th scope="col">Dropoff Time</th>
+					<th scope="col"> Action </th>
 					</tr>
-				{%endfor%}
-			</tbody>
-		</table>
-
-
-
+				</thead>
+				<tbody>
+					{% for res in future_res %}
+						<tr>
+						<td>{{ res.pu_location }}</td>
+						<td>{{ res.vehicle }}</td>
+						<td>{{ res.pu_time }}</td>
+						<td>{{ res.do_location }}</td>
+						<td>{{ res.do_time }}</td>
+						<td> <a href="{{res.id}}">Edit</a> / <a href="delete/{{res.id}}">Delete</a> </td>
+						</tr>
+					{%endfor%}
+				</tbody>
+			</table>
+		</div>
+		<div>
+			<h1>Our Locations</h1>
+			<img src="/static/reservation/img/locations.png" height="400" width="600"/ >
+			<p>Another Par</p>
+		</div>
 	</div>
 
 </body>
