added rate to model

--- a/apps/reservation/templates/reservation/add.html
+++ b/apps/reservation/templates/reservation/add.html
@@ -40,13 +40,13 @@
 					<p>Select Vehicle: </p>
 					<select name="vehicle">
 						<option value="Compact">Compact</option>
-						<option value="Mid-size Sedan">Mid-size Sedan</option>
-						<option value="Full-size Sedan" selected>Full-size Sedan</option>
-						<option value="Mid-size SUV">Mid-size SUV</option>
-						<option value="Large SUV">Large SUV</option>
+						<option value="MidSizeSedan">Mid-size Sedan</option>
+						<option value="FullSizeSedan" selected>Full-size Sedan</option>
+						<option value="MidSizeSuv">Mid-size SUV</option>
+						<option value="LargeSuv">Large SUV</option>
 						<option value="Van" selected>Van</option>
-						<option value="Passanger Van">Passander Van</option>
-						<option value="Pickup Truck">Pickup Truck</option>
+						<option value="PassangerVan">Passander Van</option>
+						<option value="PickupTruck">Pickup Truck</option>
 					</select>
 
 					<p>Pickup Location: </p>
