--- a/apps/rental/templates/rental/add.html
+++ b/apps/rental/templates/rental/add.html
@@ -13,9 +13,9 @@
 		<!-- jQuery library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<!-- CSS Link -->
-		<link rel="stylesheet" href="{% static 'reservation/css/add.css' %}" charset="utf-8"  />
+		<link rel="stylesheet" href="{% static 'rental/css/add.css' %}" charset="utf-8"  />
 		<!-- jQuery Link -->
-		<script src="{% static "reservation/js/add.js" %}"></script>
+		<script src="{% static "rental/js/add.js" %}"></script>
 
 </head>
 <body>
