--- a/apps/rental/templates/rental/index.html
+++ b/apps/rental/templates/rental/index.html
@@ -13,9 +13,9 @@
 		<!-- jQuery library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<!-- CSS Link -->
-		<link rel="stylesheet" href="{% static 'reservation/css/index.css' %}" charset="utf-8"  />
+		<link rel="stylesheet" href="{% static 'rental/css/index.css' %}" charset="utf-8"  />
 		<!-- jQuery Link -->
-		<script src="{% static "reservation/js/index.js" %}"></script>
+		<script src="{% static "rental/js/index.js" %}"></script>
 
 </head>
 <body>
@@ -34,7 +34,7 @@
 	</div>
 	<div class="wrapper">
 		<h1>Welome, {{user.first_name}}</h1>
-		<p>Today is {{ today }}, your Reservations are: </p>
+		<h3>Today is {{ today|date:"M d, Y" }} your Reservations are: </h3>
 		<div class="reslist">
 			<table class="table">
 				<thead class="thead-dark">
@@ -65,7 +65,7 @@
 		</div>
 		<div>
 			<h1>Our Locations</h1>
-			<img src="/static/reservation/img/locations.png" height="400" width="600"/ >
+			<img src="/static/rental/img/locations.png" height="400" width="600"/ >
 		</div>
 	</div>
 
