--- a/apps/rental/static/rental/css/requirements.css
+++ b/apps/rental/static/rental/css/requirements.css
@@ -14,22 +14,6 @@ margin-right: auto;
 margin-left: auto;
 background-color: white;
 }
-table, td, th {  
-  border: 1px solid #ddd;
-  text-align: left;
-}
-
-table {
-  border-collapse: collapse;
-  width: 100%;
-}
-
-th, td {
-  padding: 15px;
-}
-.reslist{
-border: solid 2px;
-}
 /*=======================================================================================*/
 /* Add a black background color to the top navigation */
 .topnav {
@@ -83,12 +67,24 @@ text-align: left;
 }
 }
 /*==================================================================================*/
+ /* Style all font awesome icons */
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
 
-.quote{
-	min-height: 300px;
-	min-width: 400px;
-	display: inline-block;
-	vertical-align: top;
-	border: 2px solid black;
-	padding: 10px;
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-visa {
+  background: #3B5998;
+  color: white;
 }
