added requirements content

--- a/apps/rental/templates/rental/locations.html
+++ b/apps/rental/templates/rental/locations.html
@@ -32,6 +32,9 @@
 <div class="wrapper">
 	<h1>Our Locations</h1>
 	<img src="/static/rental/img/locations.png" height="400" width="600"/ >
+	<h3>You may return your vehicle at any of our locations.</h3>
+	<p>If you are returning a vehicle which you were not quoted with there will be approximate $20.00 intercity fee.</p>
+	<p>Note: Not all locations have a drop-off box so ensure to plan accordingly. If you leave our vehicle in a location that has no drop-off with the keys outside or in the vehicle you will be charged until it is checked back in and you are resposible for any damages since it is still in your custody. </p>
 </div>
 </body>
 </html>
