--- a/apps/rental/templates/rental/requirements.html
+++ b/apps/rental/templates/rental/requirements.html
@@ -29,8 +29,20 @@
 
 </div>
 <div class="wrapper">
-	<h1>These are the requirements</h1>
-	<i class="fa fa-cc-visa" style="font-size:36px"></i>
+	<h1>These are the requirements:</h1>
+	<h4>Renter must provide a valid drivers license</h4>
+	<p>The License may be from any state or even an international license Note: must not be expired.</p>
+	<p>A $200.00 deposit will be held at the time of rental along with the quoted price.</p>
+	<p>The renter must present a Debit Card or Credit Card in their name at the time of rental we do not take pre-paid cards, cash, or checks. If the renter is presenting a debit card a credit check will be made. If using a Credit Card no credit report is nessasary.</p>
+	<i class="fa fa-cc-visa"></i>
+	<i class="fa fa-cc-mastercard"></i>
+	<i class="fa fa-cc-amex"></i>
+	<i class="fa fa-cc-diners-club"></i>
+
+	<h2>Avoid Being Charged</h2>
+
+	<p>Absolutely no smoking in any of our vehicles as this causes us to pull the vehicle from our fleet and detail it. There is a $300.00 penalty if done.</p>
+	<p>We allow our renters to travel with their pets, however, if your pet (including service animals) leave excesive hair in our vehicle please ensure to clean up after them. There is a $300.00 charge for excessive pet hair. </p>
 </div>
 </body>
 </html>
