--- a/apps/login/static/login/index.css
+++ b/apps/login/static/login/index.css
@@ -10,7 +10,12 @@
 	color: white;
 	font-style: italic;
 }
-
+h1{
+	display: inline-block;
+}
+button{
+	float: right;
+}
 .regform{
 	height: auto;
 	width: 400px;
