--- a/apps/login/templates/login/index.html
+++ b/apps/login/templates/login/index.html
@@ -36,7 +36,7 @@
         {% endif %}
         <div class="header">
             <h1>Welcome to Hertz Car Rental</h1>
-            <button href="{% url 'intranet' %}"> Intranet </button>
+            <a href="{% url 'intranet' %}"> Intranet </a>
         </div>
 
         <form class="regform" action="{% url 'register' %}" method="post">
