--- a/apps/intranet/templates/intranet/index.html
+++ b/apps/intranet/templates/intranet/index.html
@@ -1,26 +1,20 @@
 <html>
-<head>
-	<title>Welcome Employee</title>
-	{% load static %}
-
-	<!-- CSS Link -->
-	<link rel="stylesheet" type="text/css" href="{% static 'login/index.css' %}">
-
-	 <!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-	<!-- Popper JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-
-	<!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script> 
-
-
-</head>
-<body>
-	<h1>Please Signin with employee number</h1>
-</body>
+	<head>
+		<title>Employee</title>
+		{% load static %}
+		<!-- CSS Link -->
+		<link rel="stylesheet" type="text/css" href="{% static 'intranet/index.css' %}">
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+		<!-- jQuery library -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<!-- Popper JS -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+		<!-- Latest compiled JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+	</head>
+	<body>
+		<h1>Please Signin with employee number</h1>
+		<p>another par</p>
+	</body>
 </html>
