--- a/apps/intranet/templates/intranet/index.html
+++ b/apps/intranet/templates/intranet/index.html
@@ -14,7 +14,27 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-		<h1>Please Signin with employee number</h1>
-		<p>another par</p>
+		<div class="wrapper">
+			<h1>Please Signin with employee number</h1>
+			<form class='employee_login' action='{% url "e_login" %}' method='post'>
+				{% csrf_token %}
+				<p>Employee ID</p>
+				<input type="text" name="employee_id">
+				<p>Password:</p>
+				<input type="text" name="password">
+				<button type="submit">Login</button>
+			</form>
+		<br>
+		<br>
+			<form class="admin_login" action='{% url "a_login" %}' method="post">
+				<p>Supervisor Login</p>
+				{% csrf_token %}
+				<p>User ID:</p>
+				<input type="text" name="admin_id">
+				<p>Password: </p>
+				<input type="text" name="password">
+				<button type="submit">Submit</button>
+			</form>
+		</div>
 	</body>
 </html>
