--- a/apps/intranet/templates/intranet/index.html
+++ b/apps/intranet/templates/intranet/index.html
@@ -6,6 +6,8 @@
 		<link rel="stylesheet" type="text/css" href="{% static 'intranet/index.css' %}">
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+		<!-- Icon library -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<!-- jQuery library -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<!-- Popper JS -->
@@ -15,7 +17,7 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<h1>Please Signin with employee number</h1>
+			<h1>Please Signin with employee number <a href=""></a></h1>
 			<form class='employee_login' action='{% url "e_login" %}' method='post'>
 				{% csrf_token %}
 				<p>Employee ID</p>
@@ -34,8 +36,12 @@
 				<button type="submit">Submit</button>
 			</form>
 			<div class="footer">
-				<p>Need Help?</p>
-				<p>Contact Helpdesk </p>
+				<i class="fa fa-life-ring" aria-hidden="true"> Need Tech Support?</i>
+				<i class="fa fa-phone" aria-hidden="true"> Contact Helpdesk </i>
+				<i class="fa fa-address-card-o" aria-hidden="true"> Our Other Locations</i>
+				<i class="fa fa-bug" aria-hidden="true">Report a Bug</i>
+
+
 				
 			</div>
 		</div>
