css update icons

--- a/apps/intranet/templates/intranet/index.html
+++ b/apps/intranet/templates/intranet/index.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<h1>Please Signin with employee number <a href=""></a></h1>
+			<h1>Please Sign in with employee number <a href=""></a></h1>
 			<form class='employee_login' action='{% url "e_login" %}' method='post'>
 				{% csrf_token %}
 				<p>Employee ID</p>
@@ -40,8 +40,7 @@
 				<i class="fa fa-phone" aria-hidden="true"> Contact Helpdesk </i>
 				<i class="fa fa-address-card-o" aria-hidden="true"> Our Other Locations</i>
 				<i class="fa fa-bug" aria-hidden="true">Report a Bug</i>
-
-
+				<i class="fa fa-users" aria-hidden="true">Contact Our HR</i>
 				
 			</div>
 		</div>
