--- a/apps/intranet/static/intranet/index.css
+++ b/apps/intranet/static/intranet/index.css
@@ -18,7 +18,6 @@ padding: 10px;
 border-radius: 5px;
 display: inline-block;
 margin: 30px;
-
 }
 .admin_login{
 height: 300px;
@@ -29,7 +28,6 @@ border-radius: 5px;
 display: inline-block;
 vertical-align: top;
 margin:30px;
-
 }
 button{
 margin: 5px 0px 0px 0px !important;
@@ -37,12 +35,17 @@ background-color: #2384d3;
 color: white;
 }
 .footer{
-margin-top: 86px;
-background: #8896d7;
+margin-left: 86px;
 opacity: .9;
 min-height: 110px;
-font-size: 20px
+font-size: 20px;
+position: absolute;
+bottom: 0px;
 }
-.footer i{
-	margin:40px;
+i{
+margin:20px;
+background-color: #f5f548;
+padding: 20px;
+border-radius: 9px;
+border: solid #515050;
 }
